@@ -1,23 +1,14 @@
 package no.nav.foreldrepenger.info.web.app.konfig;
 
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 
 import no.nav.foreldrepenger.info.web.app.exceptions.GeneralRestExceptionMapper;
 import no.nav.foreldrepenger.info.web.app.jackson.JacksonJsonConfig;
 
-public class FellesKlasserForRest {
+class FellesKlasserForRest {
 
-    private static final Set<Class<?>> CLASSES;
-
-    static {
-        Set<Class<?>> klasser = new HashSet<>();
-        klasser.add(JacksonJsonConfig.class);
-        klasser.add(GeneralRestExceptionMapper.class);
-        CLASSES = Collections.unmodifiableSet(klasser);
-    }
+    private static final Set<Class<?>> CLASSES = Set.of(JacksonJsonConfig.class, GeneralRestExceptionMapper.class);
 
     private FellesKlasserForRest() {
 
